# mathlib-semantic-search

./: .gitignore  README.md  deploy.md  pyproject.toml  requirements.txt
src/: api.py  app.py  codex_prompt.txt  database.py  demo_search.py  web.py
src/embed_mathlib/: .gitattributes  embed_mathlib.py  embeddings_to_numpy.py  np_embeddings.npy
src/parse_docgen/: .gitattributes  docgen_export_with_formal_statement.jsonl  parse.py
src/search/: .gitattributes  demo_search.py
src/templates/: main.html
